namespace BuildSystem
{
    public enum StageStatus
    {
        None,
        Running,
        Cancelled,
        Skipped,
        Failed,
        Succeeded,
    }
}